Bug 589467 - Shutdown idle media state machine threads. r=kinetik a=sicking